--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,9 +180,21 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 96px;
+    margin-top: 70px;
 }
 
+.client .images a{
+    display: flex;
+    align-items: center;
+    padding:0 32px;
+    height: 91px;
+
+    border-radius: 12px;
+}
+
+.client .images a:hover{
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
 /* ================Guides================ */
 .guides {
     margin-top: 40px;
