--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ a {
     flex-direction: column;
     position: relative;
     background: #E6F0FF;
-    height: 100vh;
+    height: calc(100vh - 100px);
 }
 
 .navbar {
