--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ html {
     /* chuyển chữ mặc định 16px thành 10px */
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 body {
     font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
@@ -71,6 +76,7 @@ a {
 
 .hero-wrap {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     position: relative;
     background: #E6F0FF;
@@ -115,12 +121,7 @@ a {
     border-radius: 8px;
 }
 
-/* Hero */
-.hero {
-    margin-top: 130px;
-}
-
-.hero .sub-title {
+.hero-wrap .sub-title {
     color: #687690;
     font-size: 1.8rem;
     font-style: normal;
@@ -129,7 +130,7 @@ a {
     letter-spacing: 0.01em;
 }
 
-.hero .title {
+.hero-wrap .title {
     color: #000336;
     font-size: 6.3rem;
     font-style: normal;
@@ -139,11 +140,11 @@ a {
     margin-top: 8px;
 }
 
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     color: #5A6473;
     font-size: 1.8rem;
     font-weight: 400;
